app/src/main/java/com/example/bookclub/errors/StudyCommentNotFoundException.java
package com.example.bookclub.errors;

public class StudyCommentNotFoundException extends RuntimeException{
	public  StudyCommentNotFoundException(Long id) {
		super("StudyComment not found : " + id);
	}
}
